done with mindex for now

--- a/public/the_bridge_templates/marketplace/index2.html
+++ b/public/the_bridge_templates/marketplace/index2.html
@@ -90,12 +90,12 @@
       <div class="product-list row margin-small-top" ontouchstart="this.classList.toggle('hover');">
 
         <div class="col-xs-12 center" ng-if="isLoading">
-          <br><br><br>
-          <i class="fa fa-refresh fa-2x fa-spin"></i>
-          <h4>
+          <br><br>
+          <i class="fa fa-refresh fa-spin"></i>
+          <p class="lead">
             <br>
             Hang tight while we gather data on hundreds of technologies, reviews, tags, and votes.
-          </h4>
+          </p>
         </div>
 
         <div class="col-sm-12 margin-large-bottom margin-large-top">
