--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -41,8 +41,7 @@
       </div>
     </div>
 
-    <div id="sticky-anchor2"></div>
-    <div id="sticky2" data-accordions-toggle class='accordion-panel-toggle'>
+    <div data-accordions-toggle class='accordion-panel-toggle'>
       <svg version="1.1" id="sliders" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
          viewBox="0 0 18 14" style="enable-background:new 0 0 18 14;" xml:space="preserve">
         <style type="text/css">
@@ -54,10 +53,9 @@
         <rect id="slider-top" x="3" class="st0" width="4" height="4"/>
       </svg>
     </div>
-
   </div>
-  <div id="sticky-anchor"></div>
 
+  <div id="sticky-anchor"></div>
   <div id="sticky" class="container-fluid accordion-container" style="display: block">
     <div class="col-xs-12 margin-large-top margin-bottom">
       <div class="col-lg-2 col-sm-6 custom-accord" ng-repeat="category in categories">
@@ -91,6 +89,14 @@
 
   </div>
 
+        <div class="col-xs-12 center" ng-if="isLoading">
+          <br><br><br>
+          <i class="fa fa-refresh fa-2x fa-spin"></i>
+          <h4>
+            <br>
+            Hang tight while we gather data on hundreds of technologies, reviews, tags, and votes.
+          </h4>
+        </div>
 <div id="container" class="product">
 
 <div ng-repeat="product in (filteredProducts =( products | filter:filterProducts)) | orderBy:['-integrated','-votes_count','name']">
@@ -98,7 +104,7 @@
     <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 col-xs-12 item">
       <div class="card">
         <div class="card-block">
-          <img class="card-img-top app-logo" src="{{product.logo_url}}" alt="logo coming soon..." style="cursor: pointer;" ng-click="go('/product/' + product.id)">
+          <img class="card-img-top app-logo" src="{{product.logo_url}}" alt="" style="cursor: pointer;" ng-click="go('/product/' + product.id)"><span tooltip-trigger="mouseenter" tooltip="Rating, out of 5." class="pull-right live"><b>{{product.rating | number: 1 }}</b></span>
           <br><br>
           <div class="card-block">
             <h4 class="card-title" ng-click="go('/product/' + product.id)" style="cursor: pointer;">{{product.name}}</h4>
@@ -109,9 +115,9 @@
           <a class="card-link" ng-href="{{product.website}}" ng-click="$event.stopPropagation()" target="_blank">Link</a>
               <a class="card-link pull-right" ng-show="product.integrated && !(product.name=='Telerivet')" style="cursor: pointer;" ng-click="integratedProduct('/mappings'); $event.stopPropagation()">Automate <i class="fa fa-flash"></i></a>
               <a class="card-link pull-right" ng-show="product.name=='Telerivet'" ng-href="https://github.com/OpenFn/fn-telerivet-salesforce" target="_blank">Automate <i class="fa fa-flash"></i></a>
-              <a class="card-link" ng-show="!product.integrated" ng-click="changeVoteFor(product); $event.stopPropagation()" tooltip-trigger="mouseenter" tooltip="Vote up if you want to connect {{product.name}}."><i ng-class="{'fa ' : true, 'fa-thumbs-down' : product.hasVoteForUser, 'fa-thumbs-up' : !product.hasVoteForUser}"></i></a>
+              <a class="card-link" ng-show="!product.integrated" ng-click="changeVoteFor(product); $event.stopPropagation()" tooltip-trigger="mouseenter" tooltip="Upvote for {{product.name}} to support a new adapter."><i ng-class="{'fa ' : true, 'fa-thumbs-down' : product.hasVoteForUser, 'fa-thumbs-up' : !product.hasVoteForUser}"></i></a>
               <a class="card-link" ng-hide="product.integrated"><i class="fa fa-heart"></i> + <span class="live">{{product.votes_count}}</span></a>
-              <span class="pull-right live"><b>{{product.rating | number: 1 }}</b></span>
+              <span class="pull-right"><small><ng-pluralize count="product.reviews_count" when="{'0': '','one': '1 review','other': '{} reviews'}"></ng-pluralize></small></span>
         </div>
       </div>
     </div>
