--- a/public/the_bridge_templates/mappings/sf_row.html
+++ b/public/the_bridge_templates/mappings/sf_row.html
@@ -1,6 +1,7 @@
 <div ng-controller="SalesforceCtrl" class='panel panel-default'>
-  <h4>3. <strong>Specify destination tables.</strong></h4>
-  <div class='panel-body grey'>
+  <p class="lead">3. <strong>Specify destination tables.</strong></p>
+  <div id="sticky-anchor"></div>
+  <div id="sticky" class='panel-body grey'>
     
     <div class='row'>
       <div class='col-md-4'>
@@ -63,6 +64,3 @@
     </div>
   </div>
 </div>
-
-
-
