--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -31,7 +31,7 @@
       <a href="/marketplace">
         <div class="row">
           <h2 class="featurette-heading">
-            open<strong>Marketplace</strong> helps you find the tools you need.
+            <strong>Marketplace</strong> helps you find the tools you need.
           </h2>
           <p class="lead">
             It's an app store for impact-first organizations.
@@ -49,7 +49,7 @@
       <a href="/v2" ng-click="$event.stopPropagation()">
         <div class="row">
           <h2 class="featurette-heading">
-            open<strong>Integrations</strong> make apps more powerful.
+            <strong>Integration</strong> makes apps more powerful.
           </h2>
           <p class="lead">
             All of your technologies working together seamlessly; made possible with clicks, not code!
@@ -65,16 +65,10 @@
       <a href="https://medium.com/@openFn" target="_blank">
         <div class="row">
           <h2 class="featurette-heading">
-            open<strong>Content</strong> makes it easier to lead successful implementations.
+            <strong>Content</strong> makes it easier to lead successful implementations.
           </h2>
           <p class="lead">
-            75% of IT implementations fail. Want to learn from developers 
-            who abhor custom-coded solutions? 
-            Or CIOs who understand that culture is what makes or 
-            breaks a technology project? Want to learn how and why real 
-            organizations are both succeeding and failing to implement 
-            technologies geared at growing their social impact? 
-            Read our case studies. Join the conversation.
+            75% of IT implementations fail. Let's talk about why. Want to learn from developers who abhor custom-coded solutions? Or CIOs who understand that culture is what makes or breaks a technology project? Want to learn how and why real organizations are both succeeding and failing to implement technologies geared at growing their social impact? Check out our content. Join the conversation.
           </p>
         </div>
       </a>
