--- a/public/the_bridge_templates/mappings/odk_column.html
+++ b/public/the_bridge_templates/mappings/odk_column.html
@@ -1,9 +1,9 @@
 <table class='table'>
   <thead>
     <tr>
-      <th width="5%"><h4>uuid?</h4></th>
-      <th width="45%"><h4>Source fields </h4></th>
-      <th width="50%" class="dest"><h4>4. <strong>Drag destination fields here</strong> to make your mapping.</h4></th>
+      <th width="5%"><p class="lead">uuid?</p></th>
+      <th width="45%"><p class="lead">Source fields </p></th>
+      <th width="50%" class="dest"><p class="lead">4. Drag destination fields here to make your mapping.</p></th>
     </tr>
   </thead>
   <tbody>
