--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -11,7 +11,7 @@
   </div>
 </header>
 
-<div class="featurette dark">
+<div class="featurette">
 
     <div class="container">
 
@@ -27,19 +27,19 @@
                   <strong>$0</strong> / mo.
               </li>
               <li>
-                  <strong>1</strong> map
+                  <strong>1</strong> job
               </li>
               <li>
                   <strong>limited</strong> support
               </li>
               <li>
-                  <strong>100</strong> jobs/mo.
+                  <strong>100</strong> transactions/mo.
               </li>
               <li>
                 <strong>auto</strong> sync
               </li>
               <li class="plan-action">
-                  <a href="/signup?plan=Free" ng-click="$event.stopPropagation()" class="btn btn-default btn-lg">Sign up</a>
+                  <a href="/signup?plan=Free" ng-click="$event.stopPropagation()" class="btn btn-primary btn-lg">Sign up</a>
               </li>
             </ul>
           </div>
@@ -53,19 +53,19 @@
                   <strong>$39</strong> / mo.
               </li>
               <li>
-                  <strong>3</strong> maps
+                  <strong>3</strong> jobs
               </li>
               <li>
                   <strong>limited</strong> support
               </li>
               <li>
-                  <strong>1,000</strong> jobs/mo.
+                  <strong>1,000</strong> transactions/mo.
               </li>
               <li>
                 <strong>auto</strong> sync
               </li>
               <li class="plan-action">
-               <a href="/signup?plan=Entry" ng-click="$event.stopPropagation()" class="btn btn-default btn-lg">Sign up</a>
+               <a href="/signup?plan=Entry" ng-click="$event.stopPropagation()" class="btn btn-primary btn-lg">Sign up</a>
               </li>
             </ul>
           </div>
@@ -79,19 +79,19 @@
                   <strong>$79</strong> / mo.
               </li>
               <li>
-                  <strong>10</strong> maps
+                  <strong>10</strong> jobs
               </li>
               <li>
                   <strong>limited</strong> support
               </li>
               <li>
-                  <strong>2,000</strong> jobs/mo.
+                  <strong>2,000</strong> transactions/mo.
               </li>
               <li>
                 <strong>auto</strong> sync
               </li>
               <li class="plan-action">
-               <a href="/signup?plan=Startup" ng-click="$event.stopPropagation()" class="btn btn-default btn-lg">Sign up</a>
+               <a href="/signup?plan=Startup" ng-click="$event.stopPropagation()" class="btn btn-primary btn-lg">Sign up</a>
              </li>
          </ul>
      </div>
@@ -105,19 +105,19 @@
                 <strong>$299</strong> / mo.
             </li>
             <li>
-                <strong>20</strong> maps
+                <strong>20</strong> jobs
             </li>
             <li>
                 <strong>email</strong> support
             </li>
             <li>
-                <strong>10,000</strong> jobs/mo.
+                <strong>10,000</strong> transactions/mo.
             </li>
             <li>
                 <strong><i class="fa fa-bolt"></i> rapid</strong> sync
             </li>
             <li class="plan-action">
-             <a href="/signup?plan=Growth" ng-click="$event.stopPropagation()" class="btn btn-default btn-lg">Sign up</a>
+             <a href="/signup?plan=Growth" ng-click="$event.stopPropagation()" class="btn btn-primary btn-lg">Sign up</a>
          </li>
      </ul>
     </div>
@@ -134,32 +134,27 @@
               <strong>users</strong> &amp; roles
           </li>
           <li>
-              <strong>unlimited</strong> maps
+              <strong>unlimited</strong> jobs
           </li>
           <li>
               <strong>priority</strong> support
           </li>
           <li>
-              <strong>unlimited</strong> jobs/mo.
+              <strong>unlimited</strong> transactions/mo.
           </li>
           <li>
               <strong><i class="fa fa-bolt"></i> rapid</strong> sync
           </li>
           <li class="plan-action">
-           <a href="mailto:admin@openfn.org" class="btn btn-default btn-lg">Contact</a>
+           <a href="mailto:admin@openfn.org" class="btn btn-primary btn-lg">Contact</a>
           </li>
         </ul>
       </div>
 
       </div>
-      <div class="col-lg-10 col-lg-offset-1">
-        <h4>Please <u><a href="mailto:admin@openfn.org">contact</a></u> us if none of the above plans fit your needs.</h4>
-      </div>
-      <div class="col-lg-10 col-lg-offset-1">
-        <h4>Grants and donations subsidize the costs of the platform heavily, but those costs are significant and the time and money saved by organizations using the platform is great.</h4>
-
-        <h4>By open-sourcing our code, we're ensuring that everything remains priced at or below the 'do-it-yourself' cost. If you can host the application less expensively with your own servers and staff, you're free to use everything we've built. The code is <u><a href="https://www.gnu.org/licenses/quick-guide-gplv3.html" target="_blank">GPLv3</a></u> licensed, which stipulates that any such derivatives or improvements to the platform <em>must</em> remain open-source. We will periodically roll-those enhancements back into openfn.org so that the whole community can benefit from innovations made by any of our individual members.</h4>
-        </br>
-        </br>
+      <div class="featurette">
+        <p class="lead">Please <u><a href="mailto:admin@openfn.org">contact</a></u> us if none of the above plans fit your needs.</p>
+        <p class="lead">Grants and donations subsidize the costs of the platform heavily, but those costs are significant and the time and money saved by organizations using the platform is great.</p>
+        <p class="lead">By open-sourcing our code, we're ensuring that everything remains priced at or below the 'do-it-yourself' cost. If you can host the application less expensively with your own servers and staff, you're free to use everything we've built. The code is <u><a href="https://www.gnu.org/licenses/quick-guide-gplv3.html" target="_blank">GPLv3</a></u> licensed, which stipulates that any such derivatives or improvements to the platform <em>must</em> remain open-source. We will periodically roll-those enhancements back into openfn.org so that the whole community can benefit from innovations made by any of our individual members.</p>
       </div>
 
